test/library/standard/IO/openreaderBadRegion2.good
openreaderBadRegion2.chpl:4: error: file region's lower bound must be less than its high bound
