test/library/standard/IO/openreaderBadRegion2.future
error message: reader and writer channels with region.low higher than region.high
#20524
